// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CorrelationMatrix > clamps values outside -1..+1 1`] = `
"[38;2;0;212;255m╭─[0m[38;2;0;212;255m CORRELATION MATRIX [0m[38;2;0;212;255m╮[0m
[38;2;0;212;255m│[0m        [38;2;0;212;255mX[0m     [38;2;0;212;255mY[0m   [38;2;0;212;255m│[0m
[38;2;0;212;255m├────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mX[0m     [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [48;2;0;89;48m[38;2;0;255;136m+1.50[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mY[0m     [48;2;89;24;24m[38;2;255;68;68m-1.50[0m [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m╰────────────────╯[0m"
`;

exports[`CorrelationMatrix > handles null cell values 1`] = `
"[38;2;0;212;255m╭─[0m[38;2;0;212;255m CORRELATION MATRIX [0m[38;2;0;212;255m╮[0m
[38;2;0;212;255m│[0m        [38;2;0;212;255mA[0m     [38;2;0;212;255mB[0m   [38;2;0;212;255m│[0m
[38;2;0;212;255m├────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mA[0m     [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [38;2;85;85;85m —   [0m [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mB[0m     [38;2;85;85;85m —   [0m [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m╰────────────────╯[0m"
`;

exports[`CorrelationMatrix > renders 2-ticker matrix 1`] = `
"[38;2;0;212;255m╭─[0m[38;2;0;212;255m CORRELATION MATRIX [0m[38;2;0;212;255m╮[0m
[38;2;0;212;255m│[0m       [38;2;0;212;255mAAPL[0m  [38;2;0;212;255mMSFT[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m├────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mAAPL[0m  [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [48;2;3;81;45m[38;2;0;255;136m+0.87[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mMSFT[0m  [48;2;3;81;45m[38;2;0;255;136m+0.87[0m [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m╰────────────────╯[0m"
`;

exports[`CorrelationMatrix > renders 3-ticker crypto matrix 1`] = `
"[38;2;0;212;255m╭─[0m[38;2;0;212;255m CORRELATION MATRIX [0m[38;2;0;212;255m──╮[0m
[38;2;0;212;255m│[0m       [38;2;0;212;255mBTC[0m   [38;2;0;212;255mETH[0m   [38;2;0;212;255mSOL[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m├──────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mBTC[0m   [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [48;2;5;78;44m[38;2;0;255;136m+0.82[0m [48;2;7;73;42m[38;2;0;255;136m+0.74[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mETH[0m   [48;2;5;78;44m[38;2;0;255;136m+0.82[0m [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [48;2;2;83;46m[38;2;0;255;136m+0.91[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mSOL[0m   [48;2;7;73;42m[38;2;0;255;136m+0.74[0m [48;2;2;83;46m[38;2;0;255;136m+0.91[0m [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────────────────╯[0m"
`;

exports[`CorrelationMatrix > renders 4-ticker matrix 1`] = `
"[38;2;0;212;255m╭─[0m[38;2;0;212;255m CORRELATION MATRIX [0m[38;2;0;212;255m────────╮[0m
[38;2;0;212;255m│[0m       [38;2;0;212;255mSPY[0m   [38;2;0;212;255mQQQ[0m   [38;2;0;212;255mGLD[0m   [38;2;0;212;255mTLT[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m├────────────────────────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mSPY[0m   [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [48;2;1;86;47m[38;2;0;255;136m+0.95[0m [48;2;40;26;26m[38;2;85;85;85m-0.23[0m [48;2;54;25;25m[38;2;255;68;68m-0.45[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mQQQ[0m   [48;2;1;86;47m[38;2;0;255;136m+0.95[0m [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [48;2;37;26;26m[38;2;85;85;85m-0.18[0m [48;2;59;25;25m[38;2;255;68;68m-0.52[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mGLD[0m   [48;2;40;26;26m[38;2;85;85;85m-0.23[0m [48;2;37;26;26m[38;2;85;85;85m-0.18[0m [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [48;2;17;47;33m[38;2;0;255;136m+0.34[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mTLT[0m   [48;2;54;25;25m[38;2;255;68;68m-0.45[0m [48;2;59;25;25m[38;2;255;68;68m-0.52[0m [48;2;17;47;33m[38;2;0;255;136m+0.34[0m [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m╰────────────────────────────╯[0m"
`;

exports[`CorrelationMatrix > renders in bloomberg theme 1`] = `
"[38;2;255;140;0m╭─[0m[38;2;255;140;0m CORRELATION MATRIX [0m[38;2;255;140;0m────────╮[0m
[38;2;255;140;0m│[0m       [38;2;255;140;0mSPY[0m   [38;2;255;140;0mQQQ[0m   [38;2;255;140;0mGLD[0m   [38;2;255;140;0mTLT[0m  [38;2;255;140;0m│[0m
[38;2;255;140;0m├────────────────────────────┤[0m
[38;2;255;140;0m│[0m [38;2;255;140;0mSPY[0m   [48;2;0;70;29m[38;2;0;200;83m 1.00[0m [48;2;1;68;29m[38;2;0;200;83m+0.95[0m [48;2;40;22;26m[38;2;85;85;85m-0.23[0m [48;2;54;18;25m[38;2;255;23;68m-0.45[0m [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;140;0mQQQ[0m   [48;2;1;68;29m[38;2;0;200;83m+0.95[0m [48;2;0;70;29m[38;2;0;200;83m 1.00[0m [48;2;37;23;26m[38;2;85;85;85m-0.18[0m [48;2;59;17;25m[38;2;255;23;68m-0.52[0m [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;140;0mGLD[0m   [48;2;40;22;26m[38;2;85;85;85m-0.23[0m [48;2;37;23;26m[38;2;85;85;85m-0.18[0m [48;2;0;70;29m[38;2;0;200;83m 1.00[0m [48;2;17;41;27m[38;2;0;200;83m+0.34[0m [38;2;255;140;0m│[0m
[38;2;255;140;0m│[0m [38;2;255;140;0mTLT[0m   [48;2;54;18;25m[38;2;255;23;68m-0.45[0m [48;2;59;17;25m[38;2;255;23;68m-0.52[0m [48;2;17;41;27m[38;2;0;200;83m+0.34[0m [48;2;0;70;29m[38;2;0;200;83m 1.00[0m [38;2;255;140;0m│[0m
[38;2;255;140;0m╰────────────────────────────╯[0m"
`;

exports[`CorrelationMatrix > renders in dracula theme 1`] = `
"[38;2;189;147;249m╭─[0m[38;2;189;147;249m CORRELATION MATRIX [0m[38;2;189;147;249m────────╮[0m
[38;2;189;147;249m│[0m       [38;2;189;147;249mSPY[0m   [38;2;189;147;249mQQQ[0m   [38;2;189;147;249mGLD[0m   [38;2;189;147;249mTLT[0m  [38;2;189;147;249m│[0m
[38;2;189;147;249m├────────────────────────────┤[0m
[38;2;189;147;249m│[0m [38;2;189;147;249mSPY[0m   [48;2;28;88;43m[38;2;80;250;123m 1.00[0m [48;2;28;85;43m[38;2;80;250;123m+0.95[0m [48;2;43;33;45m[38;2;98;114;164m-0.23[0m [48;2;56;32;40m[38;2;255;85;85m-0.45[0m [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;189;147;249mQQQ[0m   [48;2;28;85;43m[38;2;80;250;123m+0.95[0m [48;2;28;88;43m[38;2;80;250;123m 1.00[0m [48;2;40;33;46m[38;2;98;114;164m-0.18[0m [48;2;60;32;39m[38;2;255;85;85m-0.52[0m [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;189;147;249mGLD[0m   [48;2;43;33;45m[38;2;98;114;164m-0.23[0m [48;2;40;33;46m[38;2;98;114;164m-0.18[0m [48;2;28;88;43m[38;2;80;250;123m 1.00[0m [48;2;29;52;47m[38;2;80;250;123m+0.34[0m [38;2;189;147;249m│[0m
[38;2;189;147;249m│[0m [38;2;189;147;249mTLT[0m   [48;2;56;32;40m[38;2;255;85;85m-0.45[0m [48;2;60;32;39m[38;2;255;85;85m-0.52[0m [48;2;29;52;47m[38;2;80;250;123m+0.34[0m [48;2;28;88;43m[38;2;80;250;123m 1.00[0m [38;2;189;147;249m│[0m
[38;2;189;147;249m╰────────────────────────────╯[0m"
`;

exports[`CorrelationMatrix > renders in monochrome theme 1`] = `
"[38;2;255;255;255m╭─[0m[38;2;255;255;255m CORRELATION MATRIX [0m[38;2;255;255;255m────────╮[0m
[38;2;255;255;255m│[0m       [38;2;153;153;153mSPY[0m   [38;2;153;153;153mQQQ[0m   [38;2;153;153;153mGLD[0m   [38;2;153;153;153mTLT[0m  [38;2;255;255;255m│[0m
[38;2;255;255;255m├────────────────────────────┤[0m
[38;2;255;255;255m│[0m [38;2;153;153;153mSPY[0m   [48;2;71;71;71m[38;2;204;204;204m 1.00[0m [48;2;68;68;68m[38;2;204;204;204m+0.95[0m [48;2;26;26;26m[38;2;68;68;68m-0.23[0m [48;2;33;33;33m[38;2;136;136;136m-0.45[0m [38;2;255;255;255m│[0m
[38;2;255;255;255m│[0m [38;2;153;153;153mQQQ[0m   [48;2;68;68;68m[38;2;204;204;204m+0.95[0m [48;2;71;71;71m[38;2;204;204;204m 1.00[0m [48;2;25;25;25m[38;2;68;68;68m-0.18[0m [48;2;35;35;35m[38;2;136;136;136m-0.52[0m [38;2;255;255;255m│[0m
[38;2;255;255;255m│[0m [38;2;153;153;153mGLD[0m   [48;2;26;26;26m[38;2;68;68;68m-0.23[0m [48;2;25;25;25m[38;2;68;68;68m-0.18[0m [48;2;71;71;71m[38;2;204;204;204m 1.00[0m [48;2;37;37;37m[38;2;204;204;204m+0.34[0m [38;2;255;255;255m│[0m
[38;2;255;255;255m│[0m [38;2;153;153;153mTLT[0m   [48;2;33;33;33m[38;2;136;136;136m-0.45[0m [48;2;35;35;35m[38;2;136;136;136m-0.52[0m [48;2;37;37;37m[38;2;204;204;204m+0.34[0m [48;2;71;71;71m[38;2;204;204;204m 1.00[0m [38;2;255;255;255m│[0m
[38;2;255;255;255m╰────────────────────────────╯[0m"
`;

exports[`CorrelationMatrix > renders single-ticker matrix 1`] = `
"[38;2;0;212;255m╭─[0m[38;2;0;212;255m CORRELATION MATRIX [0m[38;2;0;212;255m╮[0m
[38;2;0;212;255m│[0m       [38;2;0;212;255mBTC[0m  [38;2;0;212;255m│[0m
[38;2;0;212;255m├──────────┤[0m
[38;2;0;212;255m│[0m [38;2;0;212;255mBTC[0m   [48;2;0;89;48m[38;2;0;255;136m 1.00[0m [38;2;0;212;255m│[0m
[38;2;0;212;255m╰──────────╯[0m"
`;
